Запилил значит логин и регу вроде как работает допилить шифровку пароля

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -5,10 +5,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body>
-<p th:text="'Hello, ' + ${name} + '!'"></p>
-<form method="post" action="login">
-    <input type="text" title="login" name="name">
-    <input type="submit">
+
+<h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="Sign Out"/>
+</form>
+
+
+
 
 </form>
 </body>
