--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -71,7 +71,7 @@ h1{
     text-decoration: none;
     font-size: 12px;
     line-height: 20px;
-    color: 000;
+    color: #000;
 }
 
 .loginbox a:hover
